# CryptoCon

./: .gitignore  CMakeLists.txt  README.md  notes.txt
cmake/: trade_connectorConfig.cmake.in
examples/: binance_trade_feed_mixin.cpp  kraken_trade_feed.cpp
src/: configs.h  main.cpp  orderbuilder.h  types.h
src/clients/: asyncclient.h  baseclient.h  binanceclient.h  binancepolicy.h  krakenpolicy.h  syncclient.h
src/policies/: binancepolicy.h  krakenpolicy.h
src/rest/: client.cpp  client.h  orderbuilder.h
src/utils/: signing.cpp  signing.h  utils.h
src/websocket/: client.cpp  client.h  client_uwebsockets.h
